<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.hotel.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_room"
            app:destination="@id/room" />
        <action
            android:id="@+id/action_home_to_dinning"
            app:destination="@id/dinning" />
        <action
            android:id="@+id/action_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_home_to_loaction"
            app:destination="@id/loaction" />
        <action
            android:id="@+id/action_home_to_contact"
            app:destination="@id/contact" />
        <action
            android:id="@+id/action_home_to_about"
            app:destination="@id/about" />
    </fragment>

    <fragment
        android:id="@+id/room"
        android:name="com.example.hotel.ui.room.room"
        android:label="@string/room"
        tools:layout="@layout/fragment_room" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hotel.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/dinning"
        android:name="com.example.hotel.ui.dinner.dinner"
        android:label="@string/dinning"
        tools:layout="@layout/fragment_dinner" />
    <fragment
        android:id="@+id/loaction"
        android:name="com.example.hotel.ui.local.local"
        android:label="@string/location"
        tools:layout="@layout/location" />

    <fragment
        android:id="@+id/contact"
        android:name="com.example.hotel.ui.contactus.contactus"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contactus" />
    <fragment
        android:id="@+id/about"
        android:name="com.example.hotel.ui.about.about"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

</navigation>